@@ -1,12 +1,12 @@
 package com.skripsi.siap_sewa.service;
 
 import com.skripsi.siap_sewa.dto.ApiResponse;
+import com.skripsi.siap_sewa.dto.shop.dashboard.TransactionResponseShopDashboard;
 import com.skripsi.siap_sewa.dto.transaction.*;
 import com.skripsi.siap_sewa.entity.*;
 import com.skripsi.siap_sewa.enums.ErrorMessageEnum;
 import com.skripsi.siap_sewa.exception.DataNotFoundException;
 import com.skripsi.siap_sewa.repository.CustomerRepository;
-import com.skripsi.siap_sewa.repository.ProductRepository;
 import com.skripsi.siap_sewa.repository.TransactionRepository;
 import com.skripsi.siap_sewa.repository.WalletReportRepository;
 import com.skripsi.siap_sewa.repository.ShopRepository;
@@ -18,10 +18,12 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -38,15 +40,10 @@ public class TransactionService {
     private final ShopRepository shopRepository;
     private final CommonUtils commonUtils;
     private static final DateTimeFormatter DATE_FORMATTER = DateTimeFormatter.ofPattern("dd MMMM yyyy");
-    private final ProductRepository productRepository;
 
     @Transactional
     public ResponseEntity<ApiResponse> getCustomerTransactions(TransactionFilterRequest filterRequest) {
         try {
-            log.info("Fetching transactions for customer {} with filters: {}",
-                    filterRequest.getCustomerId(), filterRequest);
-
-            // 1. Get all transactions matching filters
             Specification<TransactionEntity> spec = TransactionSpecification.withFilters(filterRequest);
             List<TransactionEntity> transactions = transactionRepository.findAll(spec);
 
@@ -55,16 +52,13 @@ public class TransactionService {
                 return commonUtils.setResponse(ErrorMessageEnum.DATA_NOT_FOUND, null);
             }
 
-            // 2. Group transactions by referenceNumber
-            Map<String, List<TransactionEntity>> groupedTransactions = transactions.stream()
-                    .collect(Collectors.groupingBy(TransactionEntity::getTransactionNumber));
+            Map<String, List<TransactionEntity>> groupedTransactions =
+                    transactions.stream().collect(Collectors.groupingBy(TransactionEntity::getTransactionNumber));
 
-            // 3. Build response
-            List<TransactionResponse> responseList = groupedTransactions.entrySet().stream()
-                    .map(entry -> buildGroupedTransactionResponse(entry.getKey(), entry.getValue()))
-                    .toList();
+            List<TransactionResponse> responseList = groupedTransactions.entrySet().stream().map(
+                    entry -> buildGroupedTransactionResponse(entry.getKey(), entry.getValue())
+            ).toList();
 
-            log.info("Found {} transaction groups for customer {}", responseList.size(), filterRequest.getCustomerId());
             return commonUtils.setResponse(ErrorMessageEnum.SUCCESS, responseList);
 
         } catch (Exception ex) {
@@ -73,11 +67,8 @@ public class TransactionService {
         }
     }
 
-    private TransactionResponse buildGroupedTransactionResponse(
-            String referenceNumber,
-            List<TransactionEntity> transactions
-    ) {
-        // All transactions in this group share the same referenceNumber
+    private TransactionResponse buildGroupedTransactionResponse(String referenceNumber, List<TransactionEntity> transactions) {
+
         TransactionEntity firstTransaction = transactions.get(0);
 
         return TransactionResponse.builder()
@@ -89,57 +80,51 @@ public class TransactionService {
                 .totalPrice(calculateTotalPrice(transactions))
                 .totalDeposit(calculateTotalDeposit(transactions))
                 .shippingPartner(firstTransaction.getShippingPartner())
-                .shippingPrice(firstTransaction.getShippingPrice())
+                .shippingPrice(calculateTotalShippingPrice(transactions))
                 .build();
     }
 
     private TransactionResponse.ShopInfo buildShopInfo(TransactionEntity transaction) {
-        return transaction.getProducts().stream()
-                .findFirst()
-                .map(product -> TransactionResponse.ShopInfo.builder()
+        return transaction.getProducts().stream().findFirst().map(
+                product -> TransactionResponse.ShopInfo.builder()
                         .id(product.getShop().getId())
                         .name(product.getShop().getName())
-                        .build())
-                .orElse(null);
+                        .build()).orElse(null);
     }
 
     private List<TransactionResponse.ProductInfo> buildProductInfoList(List<TransactionEntity> transactions) {
-        return transactions.stream()
-                .flatMap(transaction -> transaction.getProducts().stream()
-                        .map(product -> TransactionResponse.ProductInfo.builder()
-                                .orderId(transaction.getId())  // Unique transaction ID
+        return transactions.stream().flatMap(
+                transaction -> transaction.getProducts().stream().map(
+                        product -> TransactionResponse.ProductInfo.builder()
+                                .orderId(transaction.getId())
                                 .productId(product.getId())
                                 .productName(product.getName())
                                 .image(product.getImage())
                                 .quantity(transaction.getQuantity())
-                                .price(transaction.getAmount().divide(
-                                        BigDecimal.valueOf(transaction.getQuantity()),
-                                        RoundingMode.HALF_UP))
-                                .subTotal(transaction.getAmount())
+                                .price(transaction.getAmount())
+                                .subTotal(transaction.getAmount().multiply(new BigDecimal(transaction.getQuantity())))
                                 .startDate(transaction.getStartDate().format(DATE_FORMATTER))
                                 .endDate(transaction.getEndDate().format(DATE_FORMATTER))
-                                .build()))
-                .toList();
+                                .build())).toList();
     }
 
     private BigDecimal calculateTotalPrice(List<TransactionEntity> transactions) {
-        return transactions.stream()
-                .map(TransactionEntity::getTotalAmount)
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
+        return transactions.stream().map(TransactionEntity::getTotalAmount).reduce(BigDecimal.ZERO, BigDecimal::add);
     }
 
     private BigDecimal calculateTotalDeposit(List<TransactionEntity> transactions) {
-        return transactions.stream()
-                .map(TransactionEntity::getTotalDeposit)
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
+        return transactions.stream().map(TransactionEntity::getTotalDeposit).reduce(BigDecimal.ZERO, BigDecimal::add);
+    }
+
+    private BigDecimal calculateTotalShippingPrice(List<TransactionEntity> transactions) {
+        return transactions.stream().map(TransactionEntity::getShippingPrice).reduce(BigDecimal.ZERO, BigDecimal::add);
     }
 
     public ResponseEntity<ApiResponse> getShopTransactions(ShopTransactionFilterRequest filterRequest) {
         try {
-            log.info("Fetching transactions for shop {} with filters: {}",
-                    filterRequest.getShopId(), filterRequest);
+            log.info("Fetching transactions for shop {} with filters: {}", filterRequest.getShopId(), filterRequest);
 
-            // 1. Get all transactions matching filters
+
             Specification<TransactionEntity> spec = TransactionSpecification.withFiltersShop(filterRequest);
             List<TransactionEntity> transactions = transactionRepository.findAll(spec);
 
@@ -148,14 +133,7 @@ public class TransactionService {
                 return commonUtils.setResponse(ErrorMessageEnum.DATA_NOT_FOUND, null);
             }
 
-            // 2. Group transactions by referenceNumber
-            Map<String, List<TransactionEntity>> groupedTransactions = transactions.stream()
-                    .collect(Collectors.groupingBy(TransactionEntity::getTransactionNumber));
-
-            // 3. Build response
-            List<TransactionResponse> responseList = groupedTransactions.entrySet().stream()
-                    .map(entry -> buildGroupedTransactionResponse(entry.getKey(), entry.getValue()))
-                    .toList();
+            List<TransactionResponseShopDashboard> responseList = transactions.stream().map(transaction -> TransactionResponseShopDashboard.builder().referenceNumber(transaction.getTransactionNumber()).createAt(transaction.getCreatedAt().toString()).customerName(transaction.getCustomer().getName()).startDate(transaction.getStartDate().toString()).endDate(transaction.getEndDate().toString()).duration(BigDecimal.valueOf(ChronoUnit.DAYS.between(transaction.getStartDate(), transaction.getEndDate()))).status(transaction.getStatus()).depositStatus(transaction.isDepositReturned()).build()).collect(Collectors.toList());
 
             log.info("Found {} transaction groups for Shop {}", responseList.size(), filterRequest.getShopId());
             return commonUtils.setResponse(ErrorMessageEnum.SUCCESS, responseList);
@@ -171,88 +149,35 @@ public class TransactionService {
             log.info("Fetching transactions Details with ID {}", transactionId);
             Optional<TransactionEntity> transaction = transactionRepository.findById(transactionId);
 
-            if(transaction.isEmpty()){
+            if (transaction.isEmpty()) {
                 return commonUtils.setResponse(ErrorMessageEnum.DATA_NOT_FOUND, "Transaction not exist");
             }
 
             return commonUtils.setResponse(ErrorMessageEnum.SUCCESS, transaction);
         } catch (Exception ex) {
-            log.error("Error fetching transaction ID {} : {}", transactionId,ex.getMessage(), ex);
+            log.error("Error fetching transaction ID {} : {}", transactionId, ex.getMessage(), ex);
             return commonUtils.setResponse(ErrorMessageEnum.INTERNAL_SERVER_ERROR, null);
         }
     }
-//
-//    public ResponseEntity<ApiResponse> setStatus(UpdateStatusTransactionRequest request) {
-//        try {
-//            log.info("Update Reference Number status {} Into {}", request.getReferenceNumbers(), request.getNextStatus());
-//
-//            List<TransactionEntity> transactions = transactionRepository.findByTransactionNumberIn(request.getReferenceNumbers());
-//
-//            if(transactions.isEmpty()){
-//                return commonUtils.setResponse(ErrorMessageEnum.DATA_NOT_FOUND, "Transaction not exist");
-//            }
-//
-//            transactions.forEach(transaction -> {
-//                transaction.setStatus(request.getNextStatus());
-//                transaction.setLastUpdateAt(LocalDateTime.now());
-//            });
-//
-//            transactionRepository.saveAll(transactions);
-//
-//            return commonUtils.setResponse(ErrorMessageEnum.SUCCESS, "Success");
-//        } catch (Exception ex) {
-//            log.error("Error fetching transaction ID {} : {}", request.getReferenceNumbers(),ex.getMessage(), ex);
-//            return commonUtils.setResponse(ErrorMessageEnum.INTERNAL_SERVER_ERROR, null);
-//        }
-//    }
-//
-//    public ResponseEntity<ApiResponse> setShippingCode(String transactionId,String shippingCode,String type) {
-//        try {
-//            log.info("Update Transaction Id {} {} Code Into {}",transactionId,shippingCode,type);
-//            Optional<TransactionEntity> transaction = transactionRepository.findById(transactionId);
-//            if(transaction.isEmpty()){
-//                return commonUtils.setResponse(ErrorMessageEnum.DATA_NOT_FOUND, "Transaction not exist");
-//            }
-//
-//            if(type == "return"){
-//                transaction.get().setReturnCode(shippingCode);
-//            }else if(type == "shipping"){
-//                transaction.get().setShippingCode(shippingCode);
-//            }else{
-//                return commonUtils.setResponse(ErrorMessageEnum.DATA_NOT_FOUND, "Type not exist");
-//            }
-//
-//            transaction.get().setLastUpdateAt(LocalDateTime.now());
-//            transactionRepository.save(transaction.get());
-//
-//            return commonUtils.setResponse(ErrorMessageEnum.SUCCESS, "Success");
-//        } catch (Exception ex) {
-//            log.error("Error fetching transaction ID {} : {}", transactionId,ex.getMessage(), ex);
-//            return commonUtils.setResponse(ErrorMessageEnum.INTERNAL_SERVER_ERROR, null);
-//        }
-//    }
+
 
     public ResponseEntity<ApiResponse> getTransactionDetail(TransactionDetailRequest request) {
         try {
             log.info("Fetching transaction detail for reference: {}", request.getReferenceNumber());
 
-            // 1. Find all transactions with the same reference number
-            List<TransactionEntity> transactions = transactionRepository
-                    .findByTransactionNumber(request.getReferenceNumber());
+            List<TransactionEntity> transactions = transactionRepository.findByTransactionNumber(request.getReferenceNumber());
 
             if (transactions.isEmpty()) {
                 log.info("No transactions found with reference: {}", request.getReferenceNumber());
                 return commonUtils.setResponse(ErrorMessageEnum.DATA_NOT_FOUND, null);
             }
 
-            // 2. Validate ownership (either customer or shop)
             boolean isValid = validateOwnership(transactions, request);
             if (!isValid) {
                 log.warn("Unauthorized access to transaction reference: {}", request.getReferenceNumber());
                 return commonUtils.setResponse(ErrorMessageEnum.CUSTOMER_NOT_FOUND, null);
             }
 
-            // 3. Build response using existing helper methods
             TransactionDetailResponse response = buildTransactionDetailResponse(transactions);
 
             log.info("Successfully fetched transaction detail for reference: {}", request.getReferenceNumber());
@@ -265,20 +190,17 @@ public class TransactionService {
     }
 
     private boolean validateOwnership(List<TransactionEntity> transactions, TransactionDetailRequest request) {
-        // If no ownership validation required
+
         if (request.getCustomerId() == null && request.getShopId() == null) {
             return true;
         }
 
-        // Validate customer ownership
         if (request.getCustomerId() != null) {
             return transactions.get(0).getCustomer().getId().equals(request.getCustomerId());
         }
 
-        // Validate shop ownership
         if (request.getShopId() != null) {
-            return transactions.stream()
-                    .allMatch(t -> t.getShopId().equals(request.getShopId()));
+            return transactions.stream().allMatch(t -> t.getShopId().equals(request.getShopId()));
         }
 
         return true;
@@ -296,8 +218,8 @@ public class TransactionService {
     }
 
     private TransactionDetailResponse.TransactionDetail buildTransactionDetail(TransactionEntity transaction) {
-        return TransactionDetailResponse.TransactionDetail.builder()
-                .referenceNumber(transaction.getTransactionNumber())
+        return TransactionDetailResponse.TransactionDetail.builder().
+                referenceNumber(transaction.getTransactionNumber())
                 .status(transaction.getStatus())
                 .transactionDate(transaction.getCreatedAt().format(DATE_FORMATTER))
                 .shippingAddress(transaction.getShippingAddress())
@@ -308,33 +230,22 @@ public class TransactionService {
 
     private List<TransactionDetailResponse.ProductDetail> buildProductDetails(List<TransactionEntity> transactions) {
         return transactions.stream()
-                .map(transaction -> {
-                    ProductEntity product = transaction.getProducts().iterator().next(); // Get first product
-                    return TransactionDetailResponse.ProductDetail.builder()
-                            .orderId(transaction.getId())
-                            .productId(product.getId())
-                            .productName(product.getName())
-                            .image(product.getImage())
-                            .startRentDate(transaction.getStartDate().format(DATE_FORMATTER))
-                            .endRentDate(transaction.getEndDate().format(DATE_FORMATTER))
-                            .quantity(transaction.getQuantity())
-                            .price(transaction.getAmount().divide(
-                                    BigDecimal.valueOf(transaction.getQuantity()),
-                                    RoundingMode.HALF_UP))
-                            .subTotal(transaction.getAmount())
-                            .deposit(product.getDeposit().multiply(BigDecimal.valueOf(transaction.getQuantity())))
-                            .build();
-                })
-                .toList();
+                .flatMap(transaction -> transaction.getProducts().stream().map(product ->
+                        TransactionDetailResponse.ProductDetail.builder()
+                                .orderId(transaction.getId())
+                                .productId(product.getId())
+                                .productName(product.getName())
+                                .image(product.getImage())
+                                .startRentDate(transaction.getStartDate().format(DATE_FORMATTER))
+                                .endRentDate(transaction.getEndDate().format(DATE_FORMATTER))
+                                .quantity(transaction.getQuantity())
+                                .price(transaction.getAmount())
+                                .subTotal(transaction.getAmount().multiply(BigDecimal.valueOf(transaction.getQuantity())))
+                                .deposit(product.getDeposit().multiply(BigDecimal.valueOf(transaction.getQuantity())))
+                                .build()
+                )).toList();
     }
-
-    private TransactionDetailResponse.ProductDetail.ShopInfo buildShopInfo(ShopEntity shop) {
-        return TransactionDetailResponse.ProductDetail.ShopInfo.builder()
-                .id(shop.getId())
-                .name(shop.getName())
-                .build();
-    }
-
+    
     private TransactionDetailResponse.PaymentDetail buildPaymentDetail(List<TransactionEntity> transactions) {
         BigDecimal subTotal = calculateTotalPrice(transactions);
         BigDecimal totalDeposit = calculateTotalDeposit(transactions);
@@ -345,10 +256,7 @@ public class TransactionService {
                 .shippingPrice(transactions.get(0).getShippingPrice())
                 .serviceFee(transactions.get(0).getServiceFee())
                 .totalDeposit(totalDeposit)
-                .grandTotal(subTotal
-                        .add(transactions.get(0).getShippingPrice())
-                        .add(transactions.get(0).getServiceFee())
-                        .add(totalDeposit))
+                .grandTotal(subTotal.add(transactions.get(0).getShippingPrice()).add(transactions.get(0).getServiceFee()).add(totalDeposit))
                 .build();
     }
 
@@ -358,7 +266,7 @@ public class TransactionService {
 
             List<TransactionEntity> transactions = transactionRepository.findByTransactionNumberIn(request.getReferenceNumbers());
 
-            if(transactions.isEmpty()){
+            if (transactions.isEmpty()) {
                 return commonUtils.setResponse(ErrorMessageEnum.DATA_NOT_FOUND, "Transaction not exist");
             }
 
@@ -371,7 +279,7 @@ public class TransactionService {
 
             return commonUtils.setResponse(ErrorMessageEnum.SUCCESS, "Success");
         } catch (Exception ex) {
-            log.error("Error fetching transaction ID {} : {}", request.getReferenceNumbers(),ex.getMessage(), ex);
+            log.error("Error fetching transaction ID {} : {}", request.getReferenceNumbers(), ex.getMessage(), ex);
             return commonUtils.setResponse(ErrorMessageEnum.INTERNAL_SERVER_ERROR, null);
         }
     }
@@ -382,7 +290,7 @@ public class TransactionService {
 
             List<TransactionEntity> transactions = transactionRepository.findByTransactionNumberIn(request.getReferenceNumbers());
 
-            if(transactions.isEmpty()){
+            if (transactions.isEmpty()) {
                 return commonUtils.setResponse(ErrorMessageEnum.DATA_NOT_FOUND, "Transaction not exist");
             }
 
@@ -393,11 +301,10 @@ public class TransactionService {
                 return commonUtils.setResponse(ErrorMessageEnum.FAILED, "Amount Must be greater than zero");
             }
 
-            CustomerEntity customer = customerRepository.findById(request.getCustomerId())
-                    .orElseThrow(() -> {
-                        log.info("Customer not found with ID: {}", request.getCustomerId());
-                        return new DataNotFoundException("Customer not found");
-                    });
+            CustomerEntity customer = customerRepository.findById(request.getCustomerId()).orElseThrow(() -> {
+                log.info("Customer not found with ID: {}", request.getCustomerId());
+                return new DataNotFoundException("Customer not found");
+            });
 
             if (customer.getWalletAmount().compareTo(request.getAmount()) < 0) {
                 return commonUtils.setResponse(ErrorMessageEnum.FAILED, "Insufficient balance");
@@ -417,7 +324,7 @@ public class TransactionService {
             wallet.setUpdateAt(LocalDateTime.now());
             walletReportRepository.save(wallet);
 
-            log.info("Successfully Payment Customer ID: {}",request.getCustomerId());
+            log.info("Successfully Payment Customer ID: {}", request.getCustomerId());
 
             transactions.forEach(transaction -> {
                 transaction.setStatus("Diproses");
@@ -429,7 +336,7 @@ public class TransactionService {
 
             return commonUtils.setResponse(ErrorMessageEnum.SUCCESS, "Success");
         } catch (Exception ex) {
-            log.error("Error fetching transaction ID {} : {}", request.getReferenceNumbers(),ex.getMessage(), ex);
+            log.error("Error fetching transaction ID {} : {}", request.getReferenceNumbers(), ex.getMessage(), ex);
             return commonUtils.setResponse(ErrorMessageEnum.INTERNAL_SERVER_ERROR, null);
         }
     }
@@ -439,7 +346,7 @@ public class TransactionService {
             log.info("Update Reference Number status {} Into Dikirim", request.getReferenceNumber());
 
             List<TransactionEntity> transactions = transactionRepository.findByTransactionNumber(request.getReferenceNumber());
-            if(transactions.isEmpty()){
+            if (transactions.isEmpty()) {
                 return commonUtils.setResponse(ErrorMessageEnum.DATA_NOT_FOUND, "Transaction not exist");
             }
 
@@ -453,7 +360,7 @@ public class TransactionService {
 
             return commonUtils.setResponse(ErrorMessageEnum.SUCCESS, "Success");
         } catch (Exception ex) {
-            log.error("Error fetching transaction ID {} : {}", request.getReferenceNumber(),ex.getMessage(), ex);
+            log.error("Error fetching transaction ID {} : {}", request.getReferenceNumber(), ex.getMessage(), ex);
             return commonUtils.setResponse(ErrorMessageEnum.INTERNAL_SERVER_ERROR, null);
         }
     }
@@ -464,7 +371,7 @@ public class TransactionService {
 
             List<TransactionEntity> transactions = transactionRepository.findByTransactionNumber(request.getReferenceNumber());
 
-            if(transactions.isEmpty()){
+            if (transactions.isEmpty()) {
                 return commonUtils.setResponse(ErrorMessageEnum.DATA_NOT_FOUND, "Transaction not exist");
             }
 
@@ -477,7 +384,7 @@ public class TransactionService {
 
             return commonUtils.setResponse(ErrorMessageEnum.SUCCESS, "Success");
         } catch (Exception ex) {
-            log.error("Error fetching transaction ID {} : {}", request.getReferenceNumber(),ex.getMessage(), ex);
+            log.error("Error fetching transaction ID {} : {}", request.getReferenceNumber(), ex.getMessage(), ex);
             return commonUtils.setResponse(ErrorMessageEnum.INTERNAL_SERVER_ERROR, null);
         }
     }
@@ -488,7 +395,7 @@ public class TransactionService {
 
             List<TransactionEntity> transactions = transactionRepository.findByTransactionNumber(request.getReferenceNumber());
 
-            if(transactions.isEmpty()){
+            if (transactions.isEmpty()) {
                 return commonUtils.setResponse(ErrorMessageEnum.DATA_NOT_FOUND, "Transaction not exist");
             }
 
@@ -502,7 +409,7 @@ public class TransactionService {
 
             return commonUtils.setResponse(ErrorMessageEnum.SUCCESS, "Success");
         } catch (Exception ex) {
-            log.error("Error fetching transaction ID {} : {}", request.getReferenceNumber(),ex.getMessage(), ex);
+            log.error("Error fetching transaction ID {} : {}", request.getReferenceNumber(), ex.getMessage(), ex);
             return commonUtils.setResponse(ErrorMessageEnum.INTERNAL_SERVER_ERROR, null);
         }
     }
@@ -513,7 +420,7 @@ public class TransactionService {
 
             List<TransactionEntity> transactions = transactionRepository.findByTransactionNumber(request.getReferenceNumber());
 
-            if(transactions.isEmpty()){
+            if (transactions.isEmpty()) {
                 return commonUtils.setResponse(ErrorMessageEnum.DATA_NOT_FOUND, "Transaction not exist");
             }
 
@@ -526,17 +433,15 @@ public class TransactionService {
                 transaction.setLastUpdateAt(LocalDateTime.now());
             });
 
-            CustomerEntity customer = customerRepository.findById(request.getCustomerId())
-                    .orElseThrow(() -> {
-                        log.info("Customer not found with ID: {}", request.getCustomerId());
-                        return new DataNotFoundException("Customer not found");
-                    });
+            CustomerEntity customer = customerRepository.findById(request.getCustomerId()).orElseThrow(() -> {
+                log.info("Customer not found with ID: {}", request.getCustomerId());
+                return new DataNotFoundException("Customer not found");
+            });
 
-            ShopEntity shop = shopRepository.findById(transactions.getFirst().getShopId())
-                    .orElseThrow(() -> {
-                        log.info("Shop not found with ID: {}", transactions.getFirst().getShopId());
-                        return new DataNotFoundException("Shop not found");
-                    });
+            ShopEntity shop = shopRepository.findById(transactions.getFirst().getShopId()).orElseThrow(() -> {
+                log.info("Shop not found with ID: {}", transactions.getFirst().getShopId());
+                return new DataNotFoundException("Shop not found");
+            });
 
             if (shop.getBalance().compareTo(deposit) < 0) {
                 return commonUtils.setResponse(ErrorMessageEnum.FAILED, "Insufficient balance");
@@ -552,7 +457,7 @@ public class TransactionService {
             shopRepository.save(shop);
 
             WalletReportEntity walletCustomer = new WalletReportEntity();
-            walletCustomer.setDescription("Deposit Return From Transaction ID  : "+ transactions.getFirst().getTransactionNumber());
+            walletCustomer.setDescription("Deposit Return From Transaction ID  : " + transactions.getFirst().getTransactionNumber());
             walletCustomer.setAmount(deposit);
             walletCustomer.setType(WalletReportEntity.WalletType.DEBIT);
             walletCustomer.setCustomerId(customer.getId());
@@ -561,7 +466,7 @@ public class TransactionService {
             walletReportRepository.save(walletCustomer);
 
             WalletReportEntity walletShop = new WalletReportEntity();
-            walletShop.setDescription("Deposit Return From Transaction ID  : "+ transactions.getFirst().getTransactionNumber());
+            walletShop.setDescription("Deposit Return From Transaction ID  : " + transactions.getFirst().getTransactionNumber());
             walletShop.setAmount(deposit);
             walletShop.setType(WalletReportEntity.WalletType.CREDIT);
             walletShop.setCustomerId(shop.getId());
@@ -569,13 +474,13 @@ public class TransactionService {
             walletShop.setUpdateAt(LocalDateTime.now());
             walletReportRepository.save(walletShop);
 
-            log.info("Successfully Return Deposit of Transaction ID {} ",transactions.getFirst().getTransactionNumber());
+            log.info("Successfully Return Deposit of Transaction ID {} ", transactions.getFirst().getTransactionNumber());
 
             transactionRepository.saveAll(transactions);
 
             return commonUtils.setResponse(ErrorMessageEnum.SUCCESS, "Success");
         } catch (Exception ex) {
-            log.error("Error fetching transaction ID {} : {}", request.getReferenceNumber(),ex.getMessage(), ex);
+            log.error("Error fetching transaction ID {} : {}", request.getReferenceNumber(), ex.getMessage(), ex);
             return commonUtils.setResponse(ErrorMessageEnum.INTERNAL_SERVER_ERROR, null);
         }
     }
